🐞 fix: The picture is too wide and there is a bug

--- a/components/PostItem/PostItem.less
+++ b/components/PostItem/PostItem.less
@@ -35,6 +35,7 @@
       
       .image {
         max-height: 350rpx;
+        max-width: 580rpx;
       }
       
       .complex {
